--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_ZXhjaXRlZC1zbmFrZS05Ni5jbGVyay5hY2NvdW50cy5kZXYk
 VITE_CURRENCY='$'
 
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_BACKEND_URL = 'lms-backend-taupe-gamma.vercel.app'
